@@ -674,7 +674,7 @@ AC_ARG_ENABLE(md5-passwords,
         [  --disable-md5-passwords    Use DES crypt() instead of MD5 encryption for passwords.],
         ENABLE_MD5_PASSWORDS=$enableval,
                 [
-                        ENABLE_MD5_PASSWORDS=y
+                        ENABLE_MD5_PASSWORDS=n
                 ]
 )
 
@@ -683,6 +683,28 @@ case $ENABLE_MD5_PASSWORDS in
       AC_MSG_RESULT(yes)
       ENABLE_MD5_PASSWORDS=1
       AC_DEFINE_UNQUOTED(MD5_PASSWORDS,$ENABLE_MD5_PASSWORDS,"")
+      ;;
+  *)
+      AC_MSG_RESULT(no)
+      ;;
+esac
+
+#----------------------------------------------------------------------
+
+AC_MSG_CHECKING(whether sha512-passwords is enabled)
+AC_ARG_ENABLE(sha512-passwords,
+        [  --disable-sha512-passwords    Use DES crypt() instead of SHA512 encryption for passwords.],
+        ENABLE_SHA512_PASSWORDS=$enableval,
+                [
+                        ENABLE_SHA512_PASSWORDS=y
+                ]
+)
+
+case $ENABLE_SHA512_PASSWORDS in
+  1*|y*|Y*)
+      AC_MSG_RESULT(yes)
+      ENABLE_SHA512_PASSWORDS=1
+      AC_DEFINE_UNQUOTED(SHA512_PASSWORDS,$ENABLE_SHA512_PASSWORDS,"")
       ;;
   *)
       AC_MSG_RESULT(no)
@@ -762,7 +784,7 @@ AC_ARG_ENABLE(clear-passwd,
         [  --disable-clear-passwd     Don't store a cleartext version of the password in addition to the encrypted version.],
         CLEAR_PASS=$enableval,
                 [
-                        CLEAR_PASS=y
+                        CLEAR_PASS=n
                 ]
 )
 
@@ -1764,10 +1786,20 @@ esac
 
 case $ENABLE_MD5_PASSWORDS in
   1*|y*|Y*)
-    echo "     md5 passwords = ON  --enable-md5-passwords (default)"
+    echo "     md5 passwords = ON  --enable-md5-passwords"
     ;;
   *)
-    echo "     md5 passwords = OFF --disable-md5-passwords"
+    echo "     md5 passwords = OFF --disable-md5-passwords (default)"
+    ;;
+esac
+
+
+case $ENABLE_SHA512_PASSWORDS in
+  1*|y*|Y*)
+    echo "     sha512 passwords = ON  --enable-sha512-passwords (default)"
+    ;;
+  *)
+    echo "     sha512 passwords = OFF --disable-sha512-passwords"
     ;;
 esac
 
@@ -1804,10 +1836,10 @@ esac
 
 case $CLEAR_PASS in
   1*|y*|Y*)
-    echo "      clear passwd = ON  --enable-clear-passwd (default)"
+    echo "      clear passwd = ON  --enable-clear-passwd"
     ;;
   *)
-    echo "      clear passwd = OFF --disable-clear-passwd"
+    echo "      clear passwd = OFF --disable-clear-passwd (default)"
     ;;
 esac
 
